# scrapy-rabbitmq

./: .gitignore  Dockerfile  Dockerfile.old  README.md  create_egg.sh  docker-compose.yaml  make_zip.sh  requirements.txt  test.py  urls.txt
scrapy_rabbitmq_scheduler/: README.md  pyproject.toml
scrapy_rabbitmq_scheduler/scrapy_rabbitmq_scheduler/: connection.py  middleware.py  pipelines.py  queue.py  scheduler.py  spiders.py
scrapy_rabbitmq_scheduler/test_project/: items.py  pipelines.py  settings.py
scrapy_rabbitmq_scheduler/test_project/spiders/: product_spider.py
test_scrapy_rabbit/: scrapy.cfg
test_scrapy_rabbit/test_scrapy_rabbit/: middlewares.py  settings.py
test_scrapy_rabbit/test_scrapy_rabbit/spiders/: product_spider.py
