[tool.poetry]
name = "scrapy_rabbitmq"
version = "0.1.0"
description = ""
authors = ["AntonRusan <antonrusan@ispras.ru>"]
readme = "README.md"
packages = [
    { include = "test_project" },
    { include = "scrapy_rabbitmq_scheduler" },
]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^23.1.0"
automat = "^22.10.0"
certifi = "^2023.11.17"
cffi = "^1.16.0"
charset-normalizer = "^3.3.2"
constantly = "^23.10.4"
cryptography = "38.0.4"
cssselect = "^1.2.0"
filelock = "^3.13.1"
h2 = "^4.1.0"
hpack = "^4.0.0"
hyperframe = "^6.0.1"
hyperlink = "^21.0.0"
idna = "^3.6"
incremental = "^22.10.0"
itemadapter = "^0.8.0"
itemloaders = "^1.1.0"
jmespath = "^1.0.1"
lxml = "^4.9.3"
packaging = "^23.2"
parsel = "^1.8.1"
pika = "^1.3.2"
priority = "^2.0.0"
protego = "^0.3.0"
pyasn1 = "^0.5.1"
pyasn1-modules = "^0.3.0"
pycparser = "^2.21"
pydispatcher = "^2.0.7"
pyopenssl = "22.0.0"
queuelib = "^1.6.2"
requests = "^2.31.0"
requests-file = "^1.5.1"
scrapy = "2.9.0"
service-identity = "^23.1.0"
six = "^1.16.0"
tldextract = "^5.1.1"
twisted = "21.7.0"
typing-extensions = "^4.8.0"
urllib3 = "^2.1.0"
w3lib = "^2.1.2"
zope-interface = "^6.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
